<resources>
    <string name="app_name">Share Note</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hint_not_logged_in">未登录</string>
    <string name="save">保存</string>
    <string name="edit">编辑</string>
    <string name="remove">删除</string>
    <string name="confirm_remove">确认删除</string>
    <string name="message_confirm_remove_own_note">确认删除该笔记吗？其他用户将无法访问该笔记。</string>
    <string name="message_confirm_remove_note">确认从笔记列表删除该笔记吗？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="add_tag">添加标签</string>
    <string name="tag_already_exists">标签已存在</string>
    <string name="tag_cannot_be_blank">请输入标签</string>
    <string name="action_login">登录</string>
    <!-- Strings related to login -->
    <string name="hint_username">用户名</string>
    <string name="hint_nickname">昵称</string>
    <string name="hint_password">密码</string>
    <string name="message_invalid_username">用户名必须包含至少4个字符，且只能由英文字母、数字与下划线组成</string>
    <string name="message_invalid_password">密码必须包含至少6个字符</string>
    <string name="message_invalid_nickname">昵称不能为空</string>
    <string name="action_logout">登出</string>
    <string name="action_scan_qr_code">扫描二维码</string>
    <string name="action_create_invite">创建邀请二维码</string>
    <string name="action_create_invite_readonly">创建邀请二维码（只读）</string>
    <string name="expires_at_format">有效期限：%s</string>
    <string name="data_time_formatter">yyyy-MM-dd HH:mm</string>
    <string name="camera_permission_not_granted">未获得摄像头权限</string>
    <string name="title_consume_invite">接受邀请</string>
    <string name="hint_title">标题</string>
    <string name="owner">创建者</string>
    <string name="permission">权限</string>
    <string name="readonly">只读</string>
    <string name="readwrite">读写</string>
    <string name="messageInvalidInvite">不是合法的邀请二维码</string>
    <string name="messageExpiredInvite">邀请二维码已过期</string>
    <string name="messageInviteConsumed">已接受邀请</string>
    <string name="label_login">登录</string>
    <string name="action_register">注册</string>
    <string name="message_login_succeed">登录成功</string>
    <string name="message_register_succeed">注册成功</string>
    <string name="message_user_already_exists">`注册失败，用户名已被使用</string>
    <string name="message_unknown_error">未知错误</string>
    <string name="message_request_timeout">请求超时</string>
    <string name="message_incorrect_username_or_password">登陆失败，用户名或密码错误</string>
    <string name="hint_processing">处理中……</string>
    <string name="hint_tag_name">标签名</string>
    <string name="label_register">注册</string>
    <string name="label_note_invite">邀请二维码</string>
    <string name="hint_content">正文</string>
    <string name="message_note_not_exists">笔记不存在</string>
    <string name="message_note_permission_denied">没有修改笔记的权限</string>
    <string name="message_note_version_conflict">笔记已被更新</string>
    <string name="message_not_logged_in">请先登录</string>
    <string name="hint_note_detached">无权限</string>
    <string name="title_note_info">笔记详情</string>
    <string name="hint_created_at">创建时间</string>
    <string name="hint_modified_at">修改时间</string>
    <string name="action_note_detail">详细信息</string>
    <string name="modified_by">修改者</string>
    <string name="action_set_readonly">设为只读</string>
    <string name="action_set_readwrite">设为可读写</string>
    <string name="message_note_permission_not_exists">不存在该笔记权限</string>
    <string name="note_permission_manage">管理权限</string>
    <string name="label_note_permission">权限管理</string>
    <string name="title_note_unsaved">修改未保存</string>
    <string name="message_note_unsaved">确认要返回吗？所有修改都将丢失。</string>
    <string name="title_note_conflict_on_save">版本冲突</string>
    <string name="message_note_conflict_on_save">笔记已被更新但尚未同步。确认覆盖吗？</string>
    <string name="message_confirm_remove_draft">确认删除该草稿吗？</string>
    <string name="title_confirm_apply_draft">应用草稿</string>
    <string name="message_confirm_apply_draft">确认应用该草稿吗？之前的更改将会丢失。</string>
    <string name="action_save">保存</string>
    <string name="message_save_draft_succeed">成功保存草稿</string>
    <string name="action_draft">草稿箱</string>
    <string name="action_save_draft_on_conflict">保存为草稿</string>
    <string name="label_draft">草稿箱</string>
    <string name="message_invalid_qr_code">不是有效的二维码</string>
</resources>