<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="me.ssttkkl.sharenote.ui.notedetail.NoteDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="320dp"
        android:paddingVertical="8dp">

        <TextView
            android:id="@+id/view_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:text="@string/title_note_info"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/constraint_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_title">

            <TextView
                android:id="@+id/permission_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/vertical_spacing"
                android:text="@string/permission" />

            <TextView
                android:id="@+id/permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/large_horizontal_spacing"
                android:text="@{vm.noteState.permission}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/material_dynamic_primary20"
                tools:text="读写" />

            <TextView
                android:id="@+id/owner_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/vertical_spacing"
                android:text="@string/owner" />

            <TextView
                android:id="@+id/owner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/large_horizontal_spacing"
                android:text="@{vm.noteState.owner}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/material_dynamic_primary20"
                tools:text="owner" />

            <TextView
                android:id="@+id/created_at_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/vertical_spacing"
                android:text="@string/hint_created_at" />

            <TextView
                android:id="@+id/created_at"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/large_horizontal_spacing"
                android:text="@{vm.noteState.createdAt}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/material_dynamic_primary20"
                tools:text="2022-6-15 08:00:00" />

            <TextView
                android:id="@+id/modified_by_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/vertical_spacing"
                android:text="@string/modified_by" />

            <TextView
                android:id="@+id/modified_by"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/large_horizontal_spacing"
                android:text="@{vm.noteState.modifiedBy}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/material_dynamic_primary20"
                tools:text="modified by" />

            <TextView
                android:id="@+id/modified_at_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/vertical_spacing"
                android:text="@string/hint_modified_at" />

            <TextView
                android:id="@+id/modified_at"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/large_horizontal_spacing"
                android:text="@{vm.noteState.modifiedAt}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/material_dynamic_primary20"
                tools:text="2022-6-15 08:00:00" />

        </LinearLayout>

        <Button
            android:id="@+id/confirm_button"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/confirm"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraint_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>